# slanted-stixels

./: CMakeLists.txt  README.md  draw.cpp  draw.h  main.cpp  semi_global_matching.cpp  semi_global_matching.h  slanted_stixels.cpp  slanted_stixels.h
camera_parameters/: daimler_urban_seg.xml
erfnet/: classes.txt  colors.txt  geometry.txt
